# UPBot

./: .gitignore  README.md  debug_retrieval.py  pyproject.toml  run_evaluation.py
data/metadata/: metadata.json
src/: main.py
src/evaluation/: README.md  eval.py  eval_questions.json
src/evaluation/results/: .gitkeep
src/processing/: chunking.py
src/rag/: chain.py
